Creada clase coordinates y archivo de data de marcadores store-marker para imprimir en pantalla

--- a/src/app/components/map-edit/map-edit.component.html
+++ b/src/app/components/map-edit/map-edit.component.html
@@ -4,7 +4,7 @@
     </mat-form-field>
 
     <mat-form-field>
-        <textarea rows="3" matInput placeholder="Dirección" formControlName="Address"></textarea>
+        <input matInput placeholder="Dirección" formControlName="Address">
     </mat-form-field>
 
     <button (click)="updateMarker()" mat-raised-button color="primary">Actualizar</button>
