--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -4,12 +4,26 @@
         <!-- this creates a google map on the page with the given lat/lng from -->
         <!-- the component as the initial center of the map: -->
         <agm-map (mapClick)="addMarker( $event )" [latitude]="lat" [longitude]="lng" [zoom]="15">
+            <!-- Marker add for user -->
             <agm-marker *ngFor="let m of markers; let i = index" [latitude]="m.lat" [longitude]="m.lng">
                 <agm-info-window>
                     <strong>{{m.Name}}</strong>
                     <p> {{m.Address}}</p>
                     <p>Latitud: {{m.lat}}</p>
                     <p>Longitud: {{m.lng}}</p>
+                    <div>
+                        <button (click)="editMarker(m)" mat-raised-button color="primary">Editar</button>
+                        <button (click)="deleteMarker(i)" mat-raised-button color="warn">Borrar</button>
+                    </div>
+                </agm-info-window>
+            </agm-marker>
+            <!-- data de JSON -->
+            <agm-marker *ngFor="let m of marker; let i = index" [latitude]="m.Coordinates.lat" [longitude]="m.Coordinates.lng">
+                <agm-info-window>
+                    <strong>{{m.Name}}</strong>
+                    <p> {{m.Address}}</p>
+                    <p>Latitud: {{m.Coordinates.lat}}</p>
+                    <p>Longitud: {{m.Coordinates.lng}}</p>
                     <div>
                         <button (click)="editMarker(m)" mat-raised-button color="primary">Editar</button>
                         <button (click)="deleteMarker(i)" mat-raised-button color="warn">Borrar</button>
